Got the layout to be placed correctly, still need to complete loop for each individual brick